[gd_scene load_steps=3 format=2]

[ext_resource path="res://themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.784314 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 445.0
margin_top = 258.0
margin_right = 579.0
margin_bottom = 342.0
mouse_filter = 2

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 134.0
margin_bottom = 37.0
mouse_filter = 1
text = "Resume"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 134.0
margin_bottom = 84.0
mouse_filter = 1
text = "Quit"

[connection signal="visibility_changed" from="." to="." method="_on_PauseMenu_visibility_changed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
